# rde-commutator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  clib.json
.github/workflows/: dockerhub.yml
include/rde-commutator/: config.h  err.h  tcp_gateway.h  unix_gateway.h  unpack.h
src/: err.c  main.c  tcp_gateway.c  unix_gateway.c  unpack.c  unpack.c.issue
